--- a/main.html
+++ b/main.html
@@ -15,19 +15,22 @@
 
 <body>
 	<center>
-		<h2>How do you want your project to be</h2>
+		<h2>How do you want your project to be?</h2>
 		<div  class="toggle-container">
-			<div class="g1">
+			<div class="g1" >
+				<span>Good</span>
 	        <input id="good" name="toggle_switch" type="checkbox" />
-        <label for="good"></label>Good
+        <label for="good"></label>
 				</div>
 			<div class="g2">
+				<span>Cheap</span> 
 	 <input id="cheap" name="toggle_switch" type="checkbox" />
-        <label for="cheap"></label>Cheap
+        <label for="cheap"></label>
 			</div>
 			<div class="g3" >
+				<span>Fast</span> 
 				<input id="fast" name="toggle_switch" type="checkbox" />
-        <label for="fast"></label>Fast
+        <label for="fast"></label>
 				
 			</div>
 		</div>	
