--- a/main.html
+++ b/main.html
@@ -3,40 +3,39 @@
 <html>
 
 <head>
-	<style>
-        input[type="checkbox"] {
-          width: 0;
-          height: 0;
-          visibility: hidden;
-        }
-        </style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<center>
-		<h2>How do you want your project to be?</h2>
-		<div  class="toggle-container">
-			<div class="g1">
-				<span>Good</span>
-				</div>
-	        <input id="good" name="toggle_switch" type="checkbox" />
-        <label for="good"></label>
-			<div class="g2"> 
-				<span>Cheap</span>
-				</div>
-	 <input id="cheap" name="toggle_switch" type="checkbox" />
-        <label for="cheap"></label>
-			<div class="g3" >
-				<span>Fast</span> 
-					</div>
-				<input id="fast" name="toggle_switch" type="checkbox" />
-        <label for="fast"></label>
-		</div>	
-	</center>
 	<!-- the entire body must be written by student -->
+   <h2>How do you want your project to be?</h2>
+
+    <div class="toggle-container" id="g1">
+      <input type="checkbox" id="good" class="toggle">
+      <label for="good" class="label">
+        <div class="ball"></div>
+      </label>
+      <span>Good</span>
+    </div>
+
+    <div class="toggle-container" id="g2">
+      <input type="checkbox" id="cheap" class="toggle">
+      <label for="cheap" class="label">
+        <div class="ball"></div>
+      </label>
+      <span>Cheap</span>
+    </div>
+
+    <div class="toggle-container" id="g3">
+      <input type="checkbox" id="fast" class="toggle">
+      <label for="fast" class="label">
+        <div class="ball"></div>
+      </label>
+      <span>Fast</span>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
+
 
 </body>
 
